fix mobile bar to be a bit smaller, and make folder buttons on mobile more responsive

--- a/src/ui/styles/action-bar.css
+++ b/src/ui/styles/action-bar.css
@@ -127,7 +127,7 @@
   box-sizing: content-box;
   flex: 0 0 auto;
   line-height: 0;
-  padding: 12px;
+  padding: 11px;
 }
 
 .explorer-container:not(.use-glass) .action-group-item {
