--- a/src/ui/styles/main.css
+++ b/src/ui/styles/main.css
@@ -181,7 +181,7 @@
 }
 
 .is-mobile .explorer-container {
-  --explorer-control-size: 40px;
+  --explorer-control-size: 38px;
   --explorer-action-icon-size: 24px;
 }
 
